# kluw-vault

./: .editorconfig  .flake8  .gitignore  .pylintrc  CONTRIBUTING.md  Makefile  README.md  TimeJournal.py  app.py  config.ini  pyproject.toml  requirements.txt
.github/workflows/: test.yml
assets/: default.ini
config/: constants.py  definitions.py
locales/: base.pot
src/components/: CategoryGoalsList.py  LeftSidebar.py  MainFrame.py  ProjectCategoryProgressCard.py  ProjectsList.py  StatsDashboard.py  TimeEntriesList.py  TimeEntryForm.py  TimeTracker.py  Timer.py  dashboard.py  forms.py  frames.py  left_sidebar.py  main_frame.py  navigation.py  notifications.py  tabs.py  timer.py  views.py  visuals.py
src/controller/: activity_service.py  data_controller.py  db_controller.py  file_controller.py  project_category_goal_service.py  project_category_goal_stats_controller.py  project_category_service.py  project_service.py  settings_controller.py  statistics_controller.py  time_controller.py  time_entry_service.py  timer_controller.py
src/model/: activity.py  orm_base.py  project.py  project_category.py  project_category_goal.py  project_tag.py  rel_project_tag.py  tag.py  time_entry.py  tracking_session.py
test/: util.py
test/controller/: test_time_controller.py  test_timer_controller.py
test/model/: test_time_entry.py
tests/: util.py
tests/components/: test_gui_components.py
tests/controller/: test_time_controller.py  test_timer_controller.py
tests/model/: test_project_category_goal.py  test_time_entry.py
time-journal/: CONTRIBUTING.md  README.md
(+4 files in other folders)
