[tool.poetry]
name = "time-journal"
version = "0.1.0"
description = ""
authors = ["Sebastian Führ <s.fuehr1@gmail.com>"]
readme = "README.md"
homepage = "https://www.time-journal.app.sebastianfuehr.com"
repository = ""
license = ""

[tool.poetry.dependencies]
python = "^3.11"
ttkbootstrap = "^1.10.1"
sqlalchemy = "^2.0.19"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
pillow = "^10.0.0"


[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
# 3rd party import
ignore_missing_imports = true
# dynamic typing
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_generics = false
disallow_subclassing_any = true
# platform
python_version = "3.11"
# untyped
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# None and Optional
no_implicit_optional = true
# Warnings
warn_return_any = false
warn_unreachable = true
# Misc
pretty = true
